--- a/project.html
+++ b/project.html
@@ -74,7 +74,7 @@
                   </p>
 									<section>
 										<header>
-											<h3>Computers and the Community:</h3>
+											<h3>Computers and the community:</h3>
 										</header>
 										<p>
                       The computer lab at the junior high school has 10 computers that serve more than 200 kids. On average, two to three kids share a computer. The community lab has 10 computers that serve 40 to 50 people per day. People rely on the community lab to complete critical tasks, such as registering their kids for high school and printing out important documents.
